cmake_minimum_required(VERSION 3.22)
project(Mealy_inp_seq_gen)
find_package(Boost COMPONENTS program_options REQUIRED)
add_compile_options(-Wall -Werror)
add_executable(mealy_inp_seq_gen main.cpp MealyFSM.cpp)
add_executable(mealy_inp_seq_check check.cpp MealyFSM.cpp)
add_executable(mealy_rand_gen generator.cpp)
add_executable(mealy_show show.cpp MealyFSM.cpp)
target_include_directories(mealy_inp_seq_gen PRIVATE ${Boost_INCLUDE_DIR})
target_link_libraries(mealy_inp_seq_gen ${Boost_LIBRARIES})
target_include_directories(mealy_inp_seq_check PRIVATE ${Boost_INCLUDE_DIR})
target_link_libraries(mealy_inp_seq_check ${Boost_LIBRARIES})
target_include_directories(mealy_rand_gen PRIVATE ${Boost_INCLUDE_DIR})
target_link_libraries(mealy_rand_gen ${Boost_LIBRARIES})
target_include_directories(mealy_show PRIVATE ${Boost_INCLUDE_DIR})
target_link_libraries(mealy_show ${Boost_LIBRARIES})